@@ -99,12 +99,6 @@ __Choices: America/Mexico_City, America/Cancun, America/Merida, America/Monterre
 Choices-en.UTF-8: Mexico City (Central Time - most locations), Cancun (Central Time - Quintana Roo), Merida (Central Time - Campeche\, Yucatan), Monterrey (Central Time - Coahuila\, Durango\, Nuevo Leon\, Tamaulipas), Mazatlan (Mountain Time - S Baja\, Nayarit\, Sinaloa), Chihuahua (Mountain Time - Chihuahua), Hermosillo (Mountain Standard Time - Sonora), Tijuana (Pacific Time)
 _Description: Select your time zone:
 
-Template: tzsetup/country/MY
-Type: select
-__Choices: Asia/Kuala_Lumpur, Asia/Kuching
-Choices-en.UTF-8: Kuala Lumpur (peninsular Malaysia), Kuching (Sabah & Sarawak)
-_Description: Select your time zone:
-
 Template: tzsetup/country/NZ
 Type: select
 __Choices: Pacific/Auckland, Pacific/Chatham
