@@ -27,5 +27,6 @@ tzsetup (0.1) UNRELEASED; urgency=low
     as all are only of historical interest.
   * No more question for the Marshall Is, only one modern time zone.
   * Same for Mali.
+  * And Malaysia.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 25 Jul 2005 12:42:54 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 25 Jul 2005 12:49:21 -0400
